--- a/ServiceP2p/WebContent/ntps/assets/css/style.css
+++ b/ServiceP2p/WebContent/ntps/assets/css/style.css
@@ -1,4 +1,3 @@
-/* maki */
 [class*="maki-"]:before {
     font-family:'maki', sans-serif;
 }
@@ -19,7 +18,7 @@ body {
     min-height: 100%;
     z-index: -2;
     margin: 0px !important;
-    background: url('../img/bg.jpg') no-repeat top center fixed;
+    background: url('/ServiceP2p/ntps/assets/img/bg.jpg') no-repeat top center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -501,7 +500,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     float: left;
 }
 #button-bg {
-    background: url("../img/small-bg5.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg5.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -509,7 +508,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg2 {
-    background: url("../img/small-bg2.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg2.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -517,7 +516,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg3 {
-    background: url("../img/small-bg.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -525,7 +524,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg5 {
-    background: url("../img/giftly.png") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/giftly.png") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -549,7 +548,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg7 {
-    background: url("../img/bg3.png") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/bg3.png") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -557,7 +556,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg8 {
-    background: url("../img/small-bg8.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg8.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -565,7 +564,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg9 {
-    background: url("../img/small-bg9.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg9.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -573,7 +572,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg10 {
-    background: url("../img/small-bg10.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg10.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -581,7 +580,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg11 {
-    background: url("../img/small-bg11.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg11.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -589,7 +588,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg12 {
-    background: url("../img/small-bg12.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg12.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -597,7 +596,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {
     cursor: pointer;
 }
 #button-bg13 {
-    background: url("../img/small-bg13.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
+    background: url("/ServiceP2p/ntps/assets/img/small-bg13.jpg") repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 25px;
@@ -762,7 +761,7 @@ img.ikon {
     float: right;
 }
 #search input[type="text"] {
-    background: url("../img/search-dark.png") no-repeat scroll 14px 10px #FFFFFF;
+    background: url("/ServiceP2p/ntps/assets/img/search-dark.png") no-repeat scroll 14px 10px #FFFFFF;
     border: 0 none;
     color: #9EA7B3 !important;
     width: 150px;
@@ -792,7 +791,7 @@ input[type=text] {
     margin: 0 10px;
 }
 .dark {
-    background: url("../img/search-white.png") no-repeat scroll 36px 12px;
+    background: url("/ServiceP2p/ntps/assets/img/search-white.png") no-repeat scroll 36px 12px;
     margin-top: -18px;
     padding: 0 10px;
     border-radius: 4px;
@@ -811,7 +810,7 @@ input[type="search"] {
     font-size: 100%;
 }
 input[type="search"] {
-    background: url("images/search-icon.png") no-repeat scroll 9px center #EDEDED;
+    background: url("/ServiceP2p/ntps/assets/images/search-icon.png") no-repeat scroll 9px center #EDEDED;
     border: 1px solid #CCCCCC;
     border-radius: 10em 10em 10em 10em;
     padding: 9px 10px 9px 32px;
@@ -865,7 +864,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button {
     display: none;
 }
 input[type=search] {
-    background: url("../img/search-white.png") no-repeat scroll 18px center rgba(0, 0, 0, 0.3);
+    background: url("/ServiceP2p/ntps/assets/img/search-white.png") no-repeat scroll 18px center rgba(0, 0, 0, 0.3);
     border: 0px solid #DDDDDD;
     padding: 9px 10px 14px 32px;
     -webkit-border-radius: 0;
@@ -909,7 +908,7 @@ input::-webkit-input-placeholder {
     cursor: auto;
     border: 1px solid #ddd;
     box-shadow: none!important;
-    background: url("../img/search-dark.png") no-repeat scroll 18px center #ffffff;
+    background: url("/ServiceP2p/ntps/assets/img/search-dark.png") no-repeat scroll 18px center #ffffff;
 }
 #demo-2 input:-moz-placeholder {
     color: transparent;
@@ -1061,8 +1060,8 @@ input::-webkit-input-placeholder {
 /* CLOCK*/
  @font-face {
     font-family:'BebasNeueRegular';
-    src: url('../font/bebasneue-webfont.eot');
-    src: url('../font/bebasneue-webfont.eot?#iefix') format('embedded-opentype'), url('../font/bebasneue-webfont.woff') format('woff'), url('../font/bebasneue-webfont.ttf') format('truetype'), url('../font/bebasneue-webfont.svg#bebas_neueregular') format('svg');
+    src: url('/ServiceP2p/ntps/assets/font/bebasneue-webfont.eot');
+    src: url('/ServiceP2p/ntps/assets/font/bebasneue-webfont.eot?#iefix') format('embedded-opentype'), url('/ServiceP2p/ntps/assets/font/bebasneue-webfont.woff') format('woff'), url('/ServiceP2p/ntps/assets/font/bebasneue-webfont.ttf') format('truetype'), url('/ServiceP2p/ntps/assets/font/bebasneue-webfont.svg#bebas_neueregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -2731,7 +2730,7 @@ b#speed {
     position: absolute;
     top: 0px;
     right: 20px;
-    background: url('../images/bg_grad.jpg');
+    background: url('/ServiceP2p/ntps/assets/images/bg_grad.jpg');
     border-left: 1px solid #23B2D2;
     border-right: 1px solid #23B2D2;
     border-bottom: 1px solid #23B2D2;
